child bugs fixed, childs web ui added. Name truncates fixed.

--- a/tc_site/web_application/main_system/static/css/style.css
+++ b/tc_site/web_application/main_system/static/css/style.css
@@ -38,3 +38,24 @@ header,
 .closebtn:hover {
     color: black;
 }
+
+.trigger {
+  padding: 1px 10px;
+  font-size: 12px;
+  font-weight: 400;
+  border-radius: 10px;
+  background-color: #eee;
+  color: #212121;
+  display: inline-block;
+  margin: 2px 5px;
+}
+
+.hoverable, .trigger {
+  transition: box-shadow 0.55s;
+  box-shadow: 0;
+}
+
+.hoverable:hover, .trigger:hover {
+  transition: box-shadow 0.45s;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
